src/builder/tests/inserts/snapshots/ciboulette2pg__builder__tests__inserts__insert_normal__no_params.snap
---
source: src/builder/tests/inserts/insert_normal.rs
expression: "sqlformat::format(query.as_str(), &sqlformat::QueryParams::None,\n                  sqlformat::FormatOptions::default())"

---
INSERT INTO
  "public"."mysimpletable" DEFAULT
VALUES
  RETURNING *;
