src/builder/tests/inserts/snapshots/ciboulette2pg__builder__tests__inserts__insert_normal__simple.snap
---
source: src/builder/tests/inserts/insert_normal.rs
expression: "sqlformat::format(query.as_str(), &sqlformat::QueryParams::None,\n                  sqlformat::FormatOptions::default())"

---
INSERT INTO
  "public"."mysimpletable" ("first-name", "last-name")
VALUES
  ($1, $2) RETURNING *;
